[project]
name = "verde"
description = "Processing and gridding spatial data, machine-learning style"
dynamic = ["version"]
authors = [
  {name="The Verde Developers", email="fatiandoaterra@protonmail.com"},
]
maintainers = [
  {name = "Leonardo Uieda", email = "leouieda@gmail.com"}
]
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = ["spatial", "geoscience", "geophysics", "gridding", "interpolation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.8",
    "pandas>=1.4",
    "xarray>=2022.03",
    "scikit-learn>=1.0",
    "pooch>=1.2",
    "dask>=2022.01.0",
]

[project.optional-dependencies]
fast = ["numba>=0.55", "pykdtree>=1.3"]

[tool.setuptools.package-data]
verde.tests = ["data/*", "baseline/*"]
verde.datasets = ["registry.txt"]

[project.urls]
"Documentation" = "https://www.fatiando.org/verde"
"Release Notes" = "https://github.com/fatiando/verde/releases"
"Bug Tracker" = "https://github.com/fatiando/verde/issues"
"Source Code" = "https://github.com/fatiando/verde"

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=8.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme =  "post-release"
local_scheme =  "node-and-date"
write_to =  "verde/_version_generated.py"

# Make sure isort and Black are compatible
[tool.isort]
profile = "black"
multi_line_output = 3

[tool.burocrata]
notice = '''
# Copyright (c) 2017 The Verde Developers.
# Distributed under the terms of the BSD 3-Clause License.
# SPDX-License-Identifier: BSD-3-Clause
#
# This code is part of the Fatiando a Terra project (https://www.fatiando.org)
#'''
