[project]
name = "verde"
description = "Processing and gridding spatial data, machine-learning style"
dynamic = ["version"]
authors = [
  {name="The Verde Developers", email="fatiandoaterra@protonmail.com"},
]
maintainers = [
  {name = "Leonardo Uieda", email = "leo@uieda.com"}
]
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["spatial", "geoscience", "geophysics", "gridding", "interpolation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.25",
    "scipy>=1.10",
    "pandas>=2.0",
    "xarray>=2022.12",
    "scikit-learn>=1.2",
    "dask>=2022.01.0",
    "numba>=0.58",
    "bordado>=0.2",
]

[project.urls]
"Documentation" = "https://www.fatiando.org/verde"
"Release Notes" = "https://github.com/fatiando/verde/releases"
"Bug Tracker" = "https://github.com/fatiando/verde/issues"
"Source Code" = "https://github.com/fatiando/verde"

[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=8.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme =  "post-release"
local_scheme =  "no-local-version"
write_to =  "src/verde/_version.py"

[tool.burocrata]
notice = '''
# Copyright (c) 2017 The Verde Developers.
# Distributed under the terms of the BSD 3-Clause License.
# SPDX-License-Identifier: BSD-3-Clause
#
# This code is part of the Fatiando a Terra project (https://www.fatiando.org)
#'''

[tool.ruff]
line-length = 88
exclude = [
    "doc/_build",
    "src/verde/_version.py",
]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "D",        # pydocstyle
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "FURB",     # refurb
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "PYI",      # flake8-pyi
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "ISC001",   # Conflicts with formatter
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "RET504",   # Allow variable assignment only for return
  "PT001",    # Conventions for parenthesis on pytest.fixture
  "D200",     # Allow single line docstrings in their own line
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # disable unused-imports errors on __init__.py
"test/**" = [
    "T20", # allow print statements in tests
    "D",   # ignore pydocstyle warnings in tests
]
"doc/conf.py" = ["D"]  # ignore pydocstyle warnings in Sphinx config

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.coverage.run]
source = ["verde"]
omit = [
    "**/_version.py",
    "**/__init__.py",
]
branch = true
# Needed to combine coverage data from multiple OSs on CI
relative_files = true

[tool.coverage.paths]
source = [
    "src/verde",
    "*/verde",
    "*\\verde",
]

[tool.coverage.report]
show_missing = true
