[metadata]
name = verde
fullname = Verde
description = Processing and gridding spatial data, machine-learning style
long_description = file: README.md
long_description_content_type = text/markdown
author = The Verde Developers
author_email = fatiandoaterra@protonmail.com
maintainer = "Leonardo Uieda"
maintainer_email = leouieda@gmail.com
license = BSD 3-Clause License
license_file = LICENSE.txt
platform = any
keywords = spatial, geoscience, geophysics, gridding, interpolation
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
url = https://github.com/fatiando/verde
project_urls =
    Documentation = https://www.fatiando.org/verde
    Release Notes = https://github.com/fatiando/verde/releases
    Bug Tracker = https://github.com/fatiando/verde/issues
    Source Code = https://github.com/fatiando/verde

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.23
    scipy>=1.8
    pandas>=1.4
    xarray>=2022.03
    scikit-learn>=1.0
    pooch>=1.2
    dask>=2022.01.0

[options.extras_require]
fast =
    numba>=0.55
    pykdtree>=1.3

[options.package_data]
verde.tests = baseline/*

[flake8]
max-line-length = 88
max-doc-length = 79
ignore =
    # Too many leading '#' for block comment
    E266,
    # Line too long (82 > 79 characters)
    E501,
    # Do not use variables named 'I', 'O', or 'l'
    E741,
    # Line break before binary operator (conflicts with black)
    W503,
exclude =
    .git,
    __pycache__,
    .ipynb_checkpoints,
per-file-ignores =
    # disable unused-imports errors on __init__.py
    __init__.py: F401
    # disable shadowing of builtin io module (this should be solved)
    verde/io.py: A005

# Configure flake8-rst-docstrings
# -------------------------------
# Add some roles used in our docstrings
rst-roles =
    class,
    func,
    mod,
    meth,
    ref,
# Ignore "Unknown target name" raised on citations
extend-ignore = RST306

# Configure flake8-functions
# --------------------------
# Allow a max of 10 arguments per function
max-parameters-amount = 10
